test-suite/output/ErrorLocation_ltac_2.out
File "./output/ErrorLocation_ltac_2.v", line 3, characters 7-8:
Error: Tactic failure.

