test-suite/output/ErrorLocation_ltac_2.v
Ltac f := fail.
Goal False.
idtac; f.
Abort.
